[project]
name = "alphavantage"
version = "0.1.0"
description = "Alphavantage MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "load-dotenv>=0.1.0",
    "mcp>=1.0.0",
]
[[project.authors]]
name = "Cesar Alvernaz"
email = "cesar.alvernaz@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
alphavantage = "mcp_server_alphavantage:main"